@@ -127,6 +127,9 @@ Tests
 Build
 -----
 
+- Issue #15298: ensure _sysconfigdata is generated in build directory, not
+  source directory.
+
 - Issue #15833: Fix a regression in 3.3 that resulted in exceptions being
   raised if importlib failed to write byte-compiled files.  This affected
   attempts to build Python out-of-tree from a read-only source directory.
@@ -134,8 +137,8 @@ Build
 - Issue #15923: Fix a mistake in ``asdl_c.py`` that resulted in a TypeError
   after 2801bf875a24 (see #15801).
 
-- Issue #15819: Make sure we can build Python out-of-tree from a readonly source
-  directory.  (Somewhat related to issue #9860.)
+- Issue #15819: Make sure we can build Python out-of-tree from a read-only
+  source directory.  (Somewhat related to issue #9860.)
 
 Documentation
 -------------
